--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,5 +8,7 @@
    <h1>哈哈</h1>
 
     <p th:text="${user.uname}"></p>
+    <h1 th:text="${user.ubirth}" style="color: red;"></h1>
+    <div style="color: aqua">ltj11</div>
 </body>
 </html>
